# sara-ai

./: .dockerignore  .env.example  MEMORY_WORKER_FIXES.md  activities.py  app.py  deploy_memory_worker_fixes.sh  docker_pythonpath.py  fix_circular_import.sh  llm_proxy  package-lock.json  pyproject.toml  scan_imports.py  test_llm_proxy_endpoints.sh  test_memory_worker_manual.py  test_ws.py  trigger_echo.py
.github/workflows/: ci.yml  deploy.yml
ansible/: bootstrap.yml  infra.yml
ansible/inventory/: hosts.ini
ansible/templates/: env.j2
compose/: core.yml  monitoring.yml
compose/app/: main.py
compose/nats/: stream.conf
configs/personalities/: sara_default-old.md  sara_default.md  sara_formal.md
docs/: personas.md  security.md
frontend/: .dockerignore  .env.example.new  Dockerfile  README.md  middleware.ts  next.config.js  next.config.ts  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  test-auth-flow.js
frontend-old/: Dockerfile  package.json
frontend/app/: layout.tsx
frontend/components/: ThinkingDropdown.tsx  artifact.tsx  chat-header.tsx  chat.tsx  data-stream-handler.tsx  document-preview.tsx  error-ui.tsx  icons.tsx  message.tsx  (+11 more)
sara_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: health_check.py  prompt_preview.py
services/: __init__.py
services/dialogue_worker/: Dockerfile  activities.py  jetstream.py  main.py  pyproject.toml  requirements.txt
services/dialogue_worker/app/: consumer.py
services/dialogue_worker/dialogue_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/gateway/: Dockerfile  __init__.py  alembic.ini  main.py  pyproject.toml  requirements.txt  test_import.py
services/gateway/alembic/: env.py
services/gateway/alembic/versions/: 1d18f3a85c64_revert_embedding_to_vector_and_fix_.py  1dcf9ed2c000_create_messages_table.py  303bc56f1fc9_add_embedding_to_message.py  5cc1abb6a701_alter_embedding_column_to_1024_dims.py  cc31126ebc2c_create_document_and_suggestion_tables.py  d9a46f623b5d_create_chat_and_message_v2_tables.py
services/gateway/app/: __init__.py  api.py  auth.py  chat.py  database.py  dependencies.py  fix_imports.py  main.py  metrics.py  minio_client.py  nats_client.py  nats_utils.py  redis_client.py  redis_utils.py  settings.py  ws.py  ws_metrics.py
services/gateway/app/db/: crud.py  models.py  session.py
services/gateway/app/models/: artifacts.py
services/gateway/app/routes/: artifacts.py  auth.py  chat_queue.py  chats.py  files.py  memory.py  messages.py  persona.py  search.py
services/gateway/app/schemas/: __init__.py  artifacts.py
services/gateway/app/utils/: embeddings.py  nats_singleton.py  password.py  save_chat_chunk.py
services/gateway/sara_gateway.egg-info/: PKG-INFO  SOURCES.txt
services/gateway/tests/: conftest.py  test_auth.py  test_auth_durability.py  test_auth_stub.py  test_chat_queue.py  test_health.py  test_messages.py  test_persona.py  test_search.py
services/llm_proxy/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  worker.py
services/llm_proxy/app/: __init__.py  activity.py  main.py  ollama_client.py  workflows.py
services/llm_proxy/llm_proxy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/llm_proxy/tests/: test_http_endpoints.py  test_ws_echo.py
workflows/: __init__.py
workflows/memory_worker/: Dockerfile  activities.py  pyproject.toml  redis_client.py  worker.py  workflow.py
workflows/memory_worker/memory_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
workflows/memory_worker/tests/: __init__.py  conftest.py  test_activities.py
(+68 files in other folders)
