[project]
name = "sara-gateway"
version = "0.0.0"
description = "FastAPI edge service for Sara"
dependencies = [
    # Text extraction dependencies for immediate file processing
    "pypdf2>=3.0.0",
    "python-docx>=0.8.11",
]
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "alembic"]