[project]
name = "memory_worker"
version = "0.1.0"
dependencies = [
  "temporalio>=1.3.0",
  "redis>=5",
  "sqlalchemy>=2",
  "asyncpg",
  "httpx",
  "pydantic",
  "python-dotenv",
  "fastapi",
  "PyJWT>=2.8,<3.0",
  "pgvector>=0.2",
  "nats-py",
  "prometheus-client",
]

[tool.setuptools]
py-modules = ["activities", "workflow", "worker"]   # <-- list the root‑level .py files

[project.scripts]
memory-rollup = "worker:main"
