[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory_worker"
version = "0.1.0"
description = "Temporal worker for memory processing"
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.3.0",
    "redis>=5",
    "sqlalchemy>=2",
    "asyncpg",
    "httpx",
    "pydantic",
    "python-dotenv",
    "fastapi",
    "PyJWT>=2.8,<3.0",
    "pgvector>=0.2",
    "nats-py",
    "prometheus-client",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[tool.setuptools]
py-modules = ["activities", "workflow", "worker"]

[project.scripts]
memory-rollup = "worker:main"
